fix: remove extra space from protection tag

--- a/src/blocks/blocks/form/style.scss
+++ b/src/blocks/blocks/form/style.scss
@@ -61,6 +61,10 @@
 				flex-direction: column;
 			}
 		}
+
+		> .protection {
+			display: none;
+		}
 	}
 
 
